# book-management-app

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  features.md
.github/workflows/: django-ci.yml  docker-build-test.yml
backend/: Dockerfile  README.md  author.json  genre.json  manage.py  publisher.json  requirements.txt
backend/auth/: views.py
backend/authentication/: admin.py  managers.py  models.py  providers.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/book/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/bookService/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/core/: asgi.py  settings.py  urls.py
backend/notification/: consumer.py  models.py  routing.py  serializers.py  services.py  signals.py
backend/rating/: models.py  serializers.py  views.py
backend/review/: admin.py  models.py  permissions.py  throttles.py  (+3 more)
docs/: FEATURES.md
frontend/: Cargo.toml  Dockerfile  build.rs  index.html  server.py
frontend/public/: styles.css
frontend/src/: auth.rs  main.rs
frontend/src/components/: book_details.rs  book_info.rs  book_list.rs  category_select_list.rs  email_resend_form.rs  email_verify_form.rs  friends_list.rs  github_auth.rs  google_auth.rs  login_form.rs  mod.rs  recommendation_list.rs  registraction_form.rs  review.rs  review_input.rs  review_list.rs  reviews.rs  shelves_list.rs
frontend/src/pages/: about.rs  account.rs  book.rs  home.rs  list.rs  main_page.rs  mod.rs  not_found.rs  sign.rs
(+56 files in other folders)
