[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z'
debug = true
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0.98"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
const_format = "0.2.34"
email_address = "0.2.9"
gloo-net = "0.6.0"
leptos = { version = "0.8.0", features = ["csr", "nightly"] }
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.93"
web-sys = "0.3.77"

[dev-dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.42"
web-sys = "0.3.70"
