[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z'
debug = true
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0.98"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
gloo-net = "0.6.0"
leptos = { version = "0.8.0", features = ["csr", "nightly"] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.77", features = ["Window", "Crypto", "Storage", "UrlSearchParams"] }
	

[build-dependencies]
dotenv = "0.15.0"
